ast_vm/src/opt/snapshots/ast_vm__opt__compiler__test__local_scopes_are_different.snap
---
source: ast_vm/src/opt/compiler.rs
expression: module
---
Module {
    chunks: [
        Statement(
            If(
                Conditional {
                    condition: Number(
                        NumberLiteral(
                            1.0,
                        ),
                    ),
                    body: Block {
                        statements: [
                            LocalDeclaration(
                                Declaration {
                                    names: NonEmptyVec(
                                        [
                                            LocalValueID(
                                                0,
                                            ),
                                        ],
                                    ),
                                    initial_values: [
                                        Number(
                                            NumberLiteral(
                                                42.0,
                                            ),
                                        ),
                                    ],
                                },
                            ),
                        ],
                        ret: None,
                    },
                    tail: End,
                },
            ),
        ),
        Statement(
            If(
                Conditional {
                    condition: Number(
                        NumberLiteral(
                            1.0,
                        ),
                    ),
                    body: Block {
                        statements: [
                            FunctionCall(
                                Function {
                                    func: Named(
                                        Global(
                                            GlobalValueID(
                                                0,
                                            ),
                                        ),
                                    ),
                                    args: Arglist(
                                        [
                                            UnaryOperator {
                                                op: Not,
                                                exp: Variable(
                                                    Named(
                                                        Global(
                                                            GlobalValueID(
                                                                1,
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ),
                        ],
                        ret: None,
                    },
                    tail: End,
                },
            ),
        ),
    ],
    ret: None,
    local_count: 1,
}
